#//-----------------------------------------------------------------------------
#//	GAMEUI.VPC
#//
#//	Project Script
#//-----------------------------------------------------------------------------

cmake_minimum_required(VERSION 3.16)
project(gameui)
set(SRCDIR "${CMAKE_SOURCE_DIR}")
set(CMAKE_MODULE_PATH ${SRCDIR}/cmake)
set(OUTBINNAME "GameUI")
set(OUTBINDIR ${SRCDIR}/../game/bin)

include(${CMAKE_MODULE_PATH}/detect_platform.cmake)
include(${CMAKE_MODULE_PATH}/source_dll_base.cmake)

add_definitions(-DGAMEUI_EXPORTS -DNO_STEAM -DVERSION_SAFE_STEAM_API_INTERFACES)

include_directories(${SRCDIR}/gameui)
include_directories(${SRCDIR}/common)
include_directories(${SRCDIR}/common/GameUI)
include_directories(${SRCDIR}/thirdparty)

#target_sources(${OUTBINNAME} PRIVATE "studiorender.cpp")

target_sources(${OUTBINNAME} PRIVATE "BackgroundMenuButton.cpp")
target_sources(${OUTBINNAME} PRIVATE "BasePanel.cpp")
target_sources(${OUTBINNAME} PRIVATE "GameConsole.cpp")
target_sources(${OUTBINNAME} PRIVATE "GameUI_Interface.cpp")
target_sources(${OUTBINNAME} PRIVATE "ModInfo.cpp")
target_sources(${OUTBINNAME} PRIVATE "MouseMessageForwardingPanel.cpp")
target_sources(${OUTBINNAME} PRIVATE "../common/GameUI/ObjectList.cpp")
target_sources(${OUTBINNAME} PRIVATE "PanelListPanel.cpp")
target_sources(${OUTBINNAME} PRIVATE "RunGameEngine.cpp")
target_sources(${OUTBINNAME} PRIVATE "../common/GameUI/scriptobject.cpp")
target_sources(${OUTBINNAME} PRIVATE "Sys_Utils.cpp")
target_sources(${OUTBINNAME} PRIVATE "TextEntryBox.cpp")
target_sources(${OUTBINNAME} PRIVATE "TGAImagePanel.cpp")
target_sources(${OUTBINNAME} PRIVATE "../public/vgui_controls/vgui_controls.cpp")
target_sources(${OUTBINNAME} PRIVATE "VGuiSystemModuleLoader.cpp")
target_sources(${OUTBINNAME} PRIVATE "BonusMapsDatabase.cpp")
target_sources(${OUTBINNAME} PRIVATE "../common/language.cpp")
target_sources(${OUTBINNAME} PRIVATE "../common/imageutils.cpp")
target_sources(${OUTBINNAME} PRIVATE "SaveGameBrowserDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "gameui_util.cpp")
target_sources(${OUTBINNAME} PRIVATE "BitmapImagePanel.cpp")
target_sources(${OUTBINNAME} PRIVATE "CommandCheckButton.cpp")
target_sources(${OUTBINNAME} PRIVATE "CvarNegateCheckButton.cpp")
target_sources(${OUTBINNAME} PRIVATE "../common/GameUI/cvarslider.cpp")
target_sources(${OUTBINNAME} PRIVATE "CvarTextEntry.cpp")
target_sources(${OUTBINNAME} PRIVATE "CvarToggleCheckButton.cpp")
target_sources(${OUTBINNAME} PRIVATE "HapticControlBox.cpp")
target_sources(${OUTBINNAME} PRIVATE "KeyToggleCheckButton.cpp")
target_sources(${OUTBINNAME} PRIVATE "LabeledCommandComboBox.cpp")
target_sources(${OUTBINNAME} PRIVATE "URLButton.cpp")
target_sources(${OUTBINNAME} PRIVATE "vcontrolslistpanel.cpp")
target_sources(${OUTBINNAME} PRIVATE "BenchmarkDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "BonusMapsDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "CommentaryDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "CommentaryExplanationDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "ContentControlDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "CustomTabExplanationDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "GameConsoleDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "LoadGameDialog_Xbox.cpp")
target_sources(${OUTBINNAME} PRIVATE "LoadGameDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "MultiplayerAdvancedDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "NewGameDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "PlayerListDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "SaveGameDialog_Xbox.cpp")
target_sources(${OUTBINNAME} PRIVATE "SaveGameDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "LoadCommentaryDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "LoadingDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "BaseSaveGameDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "CreateMultiplayerGameBotPage.cpp")
target_sources(${OUTBINNAME} PRIVATE "CreateMultiplayerGameDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "CreateMultiplayerGameGameplayPage.cpp")
target_sources(${OUTBINNAME} PRIVATE "CreateMultiplayerGameServerPage.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsDialog_Xbox.cpp")
target_sources(${OUTBINNAME} PRIVATE "ControllerDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "matchmaking/achievementsdialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "matchmaking/basedialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "matchmaking/dialogmenu.cpp")
target_sources(${OUTBINNAME} PRIVATE "matchmaking/leaderboarddialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "matchmaking/matchmakingbasepanel.cpp")
target_sources(${OUTBINNAME} PRIVATE "matchmaking/pausedialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "matchmaking/sessionlobbydialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "matchmaking/sessionoptionsdialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "matchmaking/sessionbrowserdialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "matchmaking/welcomedialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubAudio.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubDifficulty.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubGame.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubKeyboard.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubMouse.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubTouch.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubMultiplayer.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubPortal.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubVideo.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubVoice.cpp")
#target_sources(${OUTBINNAME} PRIVATE "../public/tier0/memoverride.cpp")
if(WIN32)
target_sources(${OUTBINNAME} PRIVATE "LogoFile.cpp")
target_sources(${OUTBINNAME} PRIVATE "ChangeGameDialog.cpp")
target_sources(${OUTBINNAME} PRIVATE "OptionsSubHaptics.cpp")
endif()
target_link_libraries(${OUTBINNAME} libtier0 vgui_controls tier1 tier2 tier3 libvstdlib vtf bitmap mathlib SDL2 ${LIBPUBLIC}/libsteam_api.so matsys_controls jpeglib png z)
#libs = ['tier0','vgui_controls','tier1','tier2','tier3','vstdlib','vtf','bitmap','mathlib','SDL2','steam_api','matsys_controls','JPEG','PNG','ZLIB']

#target_link_libraries(${OUTBINNAME} libvstdlib_client bitmap_client mathlib_client tier2_client tier3_client)
